--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
 }
 
 #header {
-  width: 200px;
+  width: 240px;
   margin: 0px auto;
   margin-top: 32px;
 }
@@ -33,6 +33,14 @@ time, mark, audio, video {
 #header h1 {
   font-size: 24px;
   margin-top: 3px;
+}
+
+#header p {
+  margin-bottom: 8px;
+}
+
+#header {
+  margin-bottom: 64px;
 }
 
 .project {
@@ -51,6 +59,10 @@ time, mark, audio, video {
 
 .project-description h1 {
   font-size: 24px;
+}
+
+.project-description p {
+  margin-bottom: 8px;
 }
 
 .video {
@@ -72,6 +84,24 @@ time, mark, audio, video {
   background-color: #FFFFFF;
   position: absolute;
   right: -9px;
+}
+
+.techstack {
+
+}
+
+.techstack--ul {
+  display: flex;
+}
+
+.techstack--ul li {
+  margin-right: 8px;
+  background-color: rgb(34, 34, 34);
+  color: #FFFFFF;
+  padding: 4px 8px;
+  line-height: 1.2;
+  border-radius: 4px;
+  font-size: 14px;
 }
 
 .link-container {
