--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ h1, h2, h3, h4, h5, h6, p {
   box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
+.video.wc {
+  height: 204px;
+}
+
 .border-left {
   height: 241px;
   width: 30px;
